[package]
name = "anes"
version = "0.2.1"
authors = [
  "Robert Vojta <rvojta@me.com>",
  "Andrew Walbran <qwandor@google.com>",
]
edition = "2024"
description = "ANSI Escape Sequences provider & parser"
repository = "https://github.com/qwandor/anes-rs"
documentation = "https://docs.rs/anes/"
license = "MIT OR Apache-2.0"
categories = ["command-line-interface", "parser-implementations"]
keywords = ["terminal", "ansi", "sequence", "code", "parser"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"

[lib]
bench = false

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
all-features = true

[features]
default = []
parser = ["dep:bitflags"]

[dependencies]
bitflags = { version = "2.9.1", optional = true }

[dev-dependencies]
criterion = "0.6.0"
libc = "0.2.174"

[[bench]]
name = "bench_main"
harness = false
required-features = ["parser"]

[[example]]
name = "parser"
required-features = ["parser"]
